This file documents the revision history for the Monitoring Webinterface Thruk.

next:
          - add python and go client to default cookie_auth_direct_agents
          - Config Tool:
            - show summary prompt if a post_obj_save_cmd is set
          - Business Process:
            - add weighted state example custom function

2.16-2   Sun Aug 20 13:47:31 CEST 2017
          - add json export to tac page
          - add workaround for displaying wrong host current_check_attempt
          - send commands in bulk of 100 each
          - Business Process:
            - change pre/post hooks arguments

2.16     Tue Aug  8 21:18:40 CEST 2017
          - xls exports: add column reordering
          - action menus: add close_timeout option
          - downtimes: verify if end date is after start date
          - support cascaded http backends with lmd
          - show lmd statistics to performance page
          - broadcasts:
            - show broadcasts optionally on the login page
            - add optional annotation icon
          - logcache:
            - performance improvements for the import and update commands
            - fix notifications filter by contact_name
          - cli:
            - cleanup cli module system
            - add plugin cli command
            - add bash completion
          - Business Process:
            - add input/output filter
            - make references link recursive
            - performance improvements for service status nodes
            - add optional operator for status aggregation
          - Panorama:
            - fix business process widget refresh (#702)
          - Config Tool:
            - fix removing too many backends (#743)
          - fix issue when mobile plugin is disabled (#731)

2.14-2   Fri May  5 12:31:42 CEST 2017
          - autocomplete custom variables values if exposed by show_custom_vars
          - make custom variables available in host/service excel export