@@ -400,6 +400,13 @@ sub report_email {
         my $cc      = $c->req->parameters->{'cc'}      || '';
         my $desc    = $c->req->parameters->{'desc'}    || '';
         my $subject = $c->req->parameters->{'subject'} || '';
+
+        # remove threshold flag, mail sent forced manually
+        if(defined $r->{'var'}->{'send_mail_threshold_reached'}) {
+            delete $r->{'var'}->{'send_mail_threshold_reached'};
+            Thruk::Utils::Reports::_report_save($c, $report_nr, $r);
+        }
+
         if($to) {
             local $ENV{'THRUK_MAIL_TEST'} = '/tmp/mailtest.'.$$ if $c->req->parameters->{'testmode'};
             Thruk::Utils::Reports::report_send($c, $report_nr, 1, $to, $cc, $subject, $desc);
